# basic-xml

./: CMakeLists.txt  README.md  TODO.md
basic-xml/: CMakeLists.txt  exception.h  node.cpp  node.h  parser.cpp  parser.h  type.cpp  type.h  version.cpp  version.h.in  xml.cpp  xml.h
cmake/: BasicXmlConfig.cmake  CMakeLists.txt
debian/: basic-xml-doc.install  basic-xml.install  changelog  control  copyright
doc/: CMakeLists.txt  basic-xml.doxy.in
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  catch_node.cpp  catch_parser.cpp  catch_type.cpp  catch_version.cpp  catch_xml.cpp
tools/: CMakeLists.txt  basic_xml.cpp
